Updating to 2885f91dc42a42a76455f5974fac0e5d589af432.

--- a/community/index.html
+++ b/community/index.html
@@ -393,7 +393,7 @@
       <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update research group link.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/30f87553a8...9ee3fc5f27">09:58 2016/09/11</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 30f87553a8d954aa7fdba139e4dbcce80e35b7c1.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/3658d77541...27f1d41b78">09:44 2016/09/11</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Rename publications to vita. Update publication list.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/c072dac379...30f87553a8">09:39 2016/09/11</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to c072dac3795f2b389e5018bf9e9f68d88f8f83fa.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/455d2a476c...3658d77541">05:28 2016/09/11</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Some notes to make the cv to pdf work.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/68a6e535eb...c072dac379">05:23 2016/09/11</a></li></ul>
+                <ul><li>i2000s pushed to dev at ICIQ/iciq.github.io: <em>Merge remote-tracking branch 'origin/dev' into dev Beautify.</em> <a href="https://github.com/ICIQ/iciq.github.io/compare/7fd5c6c8dc...fbb0a56940">07:59 2016/09/12</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Reorder vita content. Beautify.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/9ee3fc5f27...2885f91dc4">07:57 2016/09/12</a></li><li>i2000s commented on issue edgemaster/jekyll-scholar#2: <em>It would be nice to merge it to inukshuk's repo and have some examples of usage. I feel I will need it. Thanks!</em> <a href="https://github.com/edgemaster/jekyll-scholar/issues/2#issuecomment-246272662">07:46 2016/09/12</a></li><li>i2000s opened issue inukshuk/jekyll-scholar#165: <em>Descending the numbering</em> <a href="https://github.com/inukshuk/jekyll-scholar/issues/165">07:30 2016/09/12</a></li><li>i2000s commented on issue inukshuk/jekyll-scholar#164: <em>I think the easiest way to implement this feature is to provide an option in the {% bibliography %} code that a second bibtex template file can be …</em> <a href="https://github.com/inukshuk/jekyll-scholar/issues/164#issuecomment-246248927">05:00 2016/09/12</a></li></ul>
            </div>
        </div>
     </div>
@@ -402,12 +402,12 @@
         <h4><a property="account" href="https://twitter.com/i2000s" onclick="recordOutboundLink(this, 'Outbound Links', 'Twitter'); return false;"><img src="/assets/img/icon-twitter.png" height=45px alt="Twitter"> Discussing </a></h4>
         <div class="excerpt" height="300px">
             <div class="scroll">
-                <ul><li><p>PandA Event: <a href="https://t.co/T22KPXkcDc">https://t.co/T22KPXkcDc</a> via @UNMpanda</p>
+                <ul><li><p>It will end soon! <a href="https://t.co/K3jvCXKXTL">https://t.co/K3jvCXKXTL</a></p>
+ <a href="http://twitter.com/i2000s/statuses/775068888597868544">08:29 2016/09/11</a> </li><li><p>PandA Event: <a href="https://t.co/T22KPXkcDc">https://t.co/T22KPXkcDc</a> via @UNMpanda</p>
  <a href="http://twitter.com/i2000s/statuses/773992855186513920">09:14 2016/09/08</a> </li><li><p>I liked a @YouTube video <a href="https://t.co/O05Nwu7KM9">https://t.co/O05Nwu7KM9</a> 英国小哥为G20拍了部片子 想明白了“中国桥”【British guy</p>
  <a href="http://twitter.com/i2000s/statuses/772927050365734914">10:39 2016/09/05</a> </li><li><p>Carlton Caves recommended to read <a href="https://t.co/WCht2KNkDm">https://t.co/WCht2KNkDm</a> for gravitational wave detection :)</p>
  <a href="http://twitter.com/i2000s/statuses/768947784233865216">11:06 2016/08/25</a> </li><li><p>China launches world&#39;s first quantum science satellite <a href="https://t.co/xA17xNTLJ5">https://t.co/xA17xNTLJ5</a></p>
- <a href="http://twitter.com/i2000s/statuses/766031995851923457">10:00 2016/08/17</a> </li><li><p>@omgubuntu @ubuntu @ubuntutouch @UbuntuTouchOS Link to vote up: <a href="https://t.co/KP3n65KVwp">https://t.co/KP3n65KVwp</a></p>
- <a href="http://twitter.com/i2000s/statuses/765417189935423489">05:17 2016/08/16</a> </li></ul>
+ <a href="http://twitter.com/i2000s/statuses/766031995851923457">10:00 2016/08/17</a> </li></ul>
             </div>
         </div>
      </div>
