Updating to a0307198591d1d87ee1db3fed3b284761eb62249.

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -209,7 +209,7 @@ var _hmt = _hmt || [];
 </ul>
 <h1 id="publications">Publications</h1>
 <h2 id="articles">Articles</h2>
-<ol class="bibliography"><li><!---->
+<ol class="bibliography" reversed="reversed"><li><!---->
 <p><span id="Qi2016Dispersive">X. Qi, B. Q. Baragiola, P. S. Jessen, and I. H. Deutsch, <i>Dispersive response of atoms trapped near the surface of an optical nanofiber with applications to quantum nondemolition measurement and spin squeezing</i>, Phys. Rev. A <b>93</b>, 023817 (2016).</span></p>
 <br />
 <div id="Qi2016Dispersive-materials">
@@ -568,8 +568,8 @@ A theoretical analysis of an ultra-short pulse converted to Terahertz radiation 
 </li></ol>
 
 <h2 id="theses">Theses</h2>
-<ol class="bibliography"></ol>
- <ol class="bibliography"><li><!---->
+<ol class="bibliography" reversed="reversed"></ol>
+ <ol class="bibliography" reversed="reversed"><li><!---->
 <p><span id="Qi2012effects">X. Qi, The Effects of Multi-Exciton Interactions on Optical Cavity Emission, Master’s thesis, Queen’s University, 2012.</span></p>
 <br />
 <div id="Qi2012effects-materials">
