Updating to 9f6fa0fbb982e42667214833da4be1258005a2a1.

--- a/community/index.html
+++ b/community/index.html
@@ -393,7 +393,7 @@
       <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Reversed numbering on publications based on [this trick](inukshuk/jek…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/2885f91dc4...a030719859">09:40 2016/09/12</a></li><li>i2000s closed issue inukshuk/jekyll-scholar#165: <em>Descending the numbering</em> <a href="https://github.com/inukshuk/jekyll-scholar/issues/165">09:34 2016/09/12</a></li><li>i2000s commented on issue inukshuk/jekyll-scholar#165: <em>Thank you! I will close this issue now.</em> <a href="https://github.com/inukshuk/jekyll-scholar/issues/165#issuecomment-246296466">09:34 2016/09/12</a></li><li>i2000s commented on issue inukshuk/jekyll-scholar#165: <em>@inukshuk Thank you, that works! Along the line, is there any way to add the entry.url hyperlink to the title of an entry? I didn't make it work i…</em> <a href="https://github.com/inukshuk/jekyll-scholar/issues/165#issuecomment-246294034">09:24 2016/09/12</a></li><li>i2000s pushed to master at ICIQ/iciq.github.io: <em>Updating to fe186fe1bd980b7b83cc82d0c014e29309584009.</em> <a href="https://github.com/ICIQ/iciq.github.io/compare/50639dd5b6...9dcc5df4ea">08:50 2016/09/12</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add Jongmin to the link.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/a030719859...9f6fa0fbb9">11:53 2016/09/29</a></li><li>i2000s commented on issue Docear/Desktop#468: <em>Might be easier to just upgrade JabRef to v3.x. Any documents on this topic?</em> <a href="https://github.com/Docear/Desktop/issues/468#issuecomment-250398579">08:05 2016/09/29</a></li><li>i2000s commented on issue JabRef/jabref#181: <em>@koppor I encounters this issue when I open a bibtex file in JabRef v2.7.1, v2.10 and the latest v3.6. The ordering of fields in an entry behaves d…</em> <a href="https://github.com/JabRef/jabref/issues/181#issuecomment-250382061">06:32 2016/09/29</a></li><li>i2000s pushed to master at ICIQ/wp: <em>Remove useless themes. Synchronize bibtex formatting code with http://github.com/i2000s/bibt…</em> <a href="https://github.com/ICIQ/wp/compare/f46def65c1...3227cfc4be">06:52 2016/09/26</a></li><li>i2000s pushed to CQuIC at i2000s/bibtexbrowser: <em>Let it be able to handle first names with hyphens. Format special characters in latex escapes.</em> <a href="https://github.com/i2000s/bibtexbrowser/compare/03321f66e2...663ff32a14">06:39 2016/09/26</a></li></ul>
            </div>
        </div>
     </div>
@@ -402,12 +402,12 @@
         <h4><a property="account" href="https://twitter.com/i2000s" onclick="recordOutboundLink(this, 'Outbound Links', 'Twitter'); return false;"><img src="/assets/img/icon-twitter.png" height=45px alt="Twitter"> Discussing </a></h4>
         <div class="excerpt" height="300px">
             <div class="scroll">
-                <ul><li><p>It will end soon! <a href="https://t.co/K3jvCXKXTL">https://t.co/K3jvCXKXTL</a></p>
+                <ul><li><p><a href="https://t.co/Dvoyj0RImE">https://t.co/Dvoyj0RImE</a> CQuIC is hiring 4-5 theory Postdocs!</p>
+ <a href="http://twitter.com/i2000s/statuses/775690251297849345">01:39 2016/09/13</a> </li><li><p>It will end soon! <a href="https://t.co/K3jvCXKXTL">https://t.co/K3jvCXKXTL</a></p>
  <a href="http://twitter.com/i2000s/statuses/775068888597868544">08:29 2016/09/11</a> </li><li><p>PandA Event: <a href="https://t.co/T22KPXkcDc">https://t.co/T22KPXkcDc</a> via @UNMpanda</p>
  <a href="http://twitter.com/i2000s/statuses/773992855186513920">09:14 2016/09/08</a> </li><li><p>I liked a @YouTube video <a href="https://t.co/O05Nwu7KM9">https://t.co/O05Nwu7KM9</a> 英国小哥为G20拍了部片子 想明白了“中国桥”【British guy</p>
  <a href="http://twitter.com/i2000s/statuses/772927050365734914">10:39 2016/09/05</a> </li><li><p>Carlton Caves recommended to read <a href="https://t.co/WCht2KNkDm">https://t.co/WCht2KNkDm</a> for gravitational wave detection :)</p>
- <a href="http://twitter.com/i2000s/statuses/768947784233865216">11:06 2016/08/25</a> </li><li><p>China launches world&#39;s first quantum science satellite <a href="https://t.co/xA17xNTLJ5">https://t.co/xA17xNTLJ5</a></p>
- <a href="http://twitter.com/i2000s/statuses/766031995851923457">10:00 2016/08/17</a> </li></ul>
+ <a href="http://twitter.com/i2000s/statuses/768947784233865216">11:06 2016/08/25</a> </li></ul>
             </div>
         </div>
      </div>
