--- a/research/index.html
+++ b/research/index.html
@@ -216,10 +216,11 @@ Fig 1. Polarization spectroscopy on an optical nanofiber coupled atomic ensemble
 <h2 id="current-research-group-and-main-collaborators">Current Research Group and Main Collaborators</h2>
 <ul>
 <li>Current research group: <a href="http://cquic.unm.edu/deutsch-group/">Deutsch Group</a> in <a href="http://cquic.org/">CQuIC</a>, University of New Mexico.</li>
-<li><a href="http://w3.arizona.edu/~lascool/">Dr. Poul Jessen’s Quantum Information and Control Group</a> (experimental)–mainly with group member <a href="http://www.optics.arizona.edu/academics/students/profile/david-melchior">David Melchior</a>), from the University of Arizona (College of Optical Sciences and an established node of <a href="http://cquic.org">CQuIC</a>).</li>
-<li><a href="http://physics.unm.edu/pandaweb/people/person.php?personID=1276">Dr. Yuan-Yu Jau</a> and <a href="http://physics.unm.edu/pandaweb/people/person.php?personID=971">Grant Biedermann</a>’s experimental group from the <a href="http://www.sandia.gov/mstc/quantum/index.html">Sandia National Labs on Quantum Systems</a>.</li>
-<li><a href="http://www.physics.umd.edu/rgroups/amo/orozco/">Dr. Luis A. Orozco’s Quantum Optics and Francium Spectroscopy group</a> (experimental)–mainly with group member <a href="http://jqi.umd.edu/people/pablo-solano">Pablo Solano</a> and his fellows, from the <a href="http://jqi.umd.edu/">Joint Quantum Institute</a>, University of Maryland.</li>
+<li>Established collaborator &amp; Current research focus: <a href="http://w3.arizona.edu/~lascool/">Dr. Poul Jessen’s Quantum Information and Control Group</a> (experimental)–mainly with group member <a href="http://www.optics.arizona.edu/academics/students/profile/david-melchior">David Melchior</a>), from the University of Arizona (College of Optical Sciences and an established node of <a href="http://cquic.org">CQuIC</a>).</li>
+<li>Collaboration in beta phase &amp; Current research focus: <a href="http://physics.unm.edu/pandaweb/people/person.php?personID=1276">Dr. Yuan-Yu Jau</a>, <a href="https://www.linkedin.com/in/jongmin-lee-b156b28">Dr. Jongmin Lee</a> and <a href="http://physics.unm.edu/pandaweb/people/person.php?personID=971">Dr. Grant Biedermann</a>’s experimental group from the <a href="http://www.sandia.gov/mstc/quantum/index.html">Sandia National Labs on Quantum Systems</a>.</li>
+<li>Collaboration in alpha phase: <a href="http://www.physics.umd.edu/rgroups/amo/orozco/">Dr. Luis A. Orozco’s Quantum Optics and Francium Spectroscopy group</a> (experimental)–mainly with group member <a href="http://jqi.umd.edu/people/pablo-solano">Pablo Solano</a> and his fellows, from the <a href="http://jqi.umd.edu/">Joint Quantum Institute</a>, University of Maryland.</li>
 </ul>
+<p>Note: If you think I might be able to contribute to your research as well as deepen my understanding on nature, we can talk.</p>
 <div class="references">
 
 </div>
