--- a/noteblog.html
+++ b/noteblog.html
@@ -307,7 +307,7 @@ While optical fibers have been used for primary quantum communications, atom-fib
             <hr>
             <h4> <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;" >
               <img src="https://www.qixiaodong.tk/assets/img/icon-github.png" alt="github"> What I'm Coding </a></h4>
-            <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Use https and lower javascript version from 3.1.0 to 2.2.4 to be comp…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/0f32a39660...138cf00b1f">07:56 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 0f32a396606fe3c2e4300b9383c1d6a0a491c982.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/397bd33943...5382cfad2d">07:33 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Correct some urls to use SSL. Initialize notes on domain name settings and SSL.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8925077768...0f32a39660">07:28 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 89250777687cba0238a72e7e6e4d15b654a31832.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/2a928e1b82...397bd33943">06:36 2016/11/07</a></li></ul>
+            <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix some broken links in https.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/40eaa825ae...8ddb64093e">08:16 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix some broken link in https.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/138cf00b1f...40eaa825ae">08:13 2016/11/07</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 138cf00b1f3be791338301e675f58db04205421a.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/5382cfad2d...96e3cf420b">08:00 2016/11/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Use https and lower javascript version from 3.1.0 to 2.2.4 to be comp…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/0f32a39660...138cf00b1f">07:56 2016/11/07</a></li></ul>
           </div>
 
          </div>
@@ -337,7 +337,7 @@ While optical fibers have been used for primary quantum communications, atom-fib
 Title: Advanced Topics in Quantum Optics (II)
 
 (Yeah, we have tagged part I two years before alr... -->
-<p>As usual, I will organize/participate a summer study this year. Since there are a lot of things going on this summer and <a href="//cquic.unm.edu/deutsch-group/">Prof. Ivan Deutsch</a> here in UNM is actually hosting review sessions on Quantum Optics I this summer, I was thinking to have the following focus for my self-organized summer study:</p>
+<p>As usual, I will organize/participate a summer study this year. Since there are a lot of things going on this summer and <a href="http://cquic.unm.edu/deutsch-group/">Prof. Ivan Deutsch</a> here in UNM is actually hosting review sessions on Quantum Optics I this summer, I was thinking to have the following focus for my self-organized summer study:</p>
 <ul>
 <li>Title: Advanced Topics in Quantum Optics (II)</li>
 </ul>
@@ -361,9 +361,9 @@ Title: Advanced Topics in Quantum Optics (II)
 <li><p>Time slot: From June 1st to July 29th. Detailed schedule to be updated.</p></li>
 <li>Main references:
 <ul>
-<li><a href="//info.phys.unm.edu/~ideutsch/Classes/Phys566F15/index.htm">Quantum Optics I by Prof. Ivan Deutsch</a> (lecture videos, notes and homeworks are all available in the link).</li>
-<li><a href="//info.phys.unm.edu/~ideutsch/Classes/Phys531F11/index.htm">Atomic Physics course by Prof. Ivan Deutsch</a> (lecture videos, notes and homeworks are all available in the link).</li>
-<li>A book, if you wish, as shown in the photo above by our friend <a href="//cquic.unm.edu/member/yuan.yu.jau/">Yuan-Yu Jau</a> and others on Optical Pumping featured with simulation demo codes and detailed analysis.</li>
+<li><a href="http://info.phys.unm.edu/~ideutsch/Classes/Phys566F15/index.htm">Quantum Optics I by Prof. Ivan Deutsch</a> (lecture videos, notes and homeworks are all available in the link).</li>
+<li><a href="http://info.phys.unm.edu/~ideutsch/Classes/Phys531F11/index.htm">Atomic Physics course by Prof. Ivan Deutsch</a> (lecture videos, notes and homeworks are all available in the link).</li>
+<li>A book, if you wish, as shown in the photo above by our friend <a href="http://cquic.unm.edu/member/yuan.yu.jau/">Yuan-Yu Jau</a> and others on Optical Pumping featured with simulation demo codes and detailed analysis.</li>
 <li>A handful of classical papers to be updated here later.</li>
 </ul></li>
 <li><p>Discussion forum: <a href="https://disqus.com/home/channel/quantumoptics">see this channel</a> I created recently.</p></li>
@@ -417,14 +417,14 @@ Link to the PDF.
 Abstract:
 While optical fibers have been used for primary quantum communications, atom-fiber and atom-waveguide based quantum interfaces have been proposed as effective elements to implement a broad range of quantum information processing applications. We stu... -->
 <p>I am going to present our recent work in <a href="http://physics.unm.edu/SQuInT/2016/index.php">the 18th SQuInT Workshop</a> at Albuquerque, NM, USA. Below you can find my poster.</p>
-<p><a href="/assets/posters/SQuInT2016-Nanofiber.pdf">Link to the PDF</a>.</p>
+<p><a href="https://www.qixiaodong.tk/assets/posters/SQuInT2016-Nanofiber.pdf">Link to the PDF</a>.</p>
 <h2 id="abstract">Abstract:</h2>
 <p>While optical fibers have been used for primary quantum communications, atom-fiber and atom-waveguide based quantum interfaces have been proposed as effective elements to implement a broad range of quantum information processing applications. We study the strong coupling between photons and atoms that can be achieved in an optical nanofiber geometry when the interaction is dispersive. While the Purcell enhancement factor for spontaneous emission into the guided mode does not reach the strong-coupling regime for individual atoms, one can obtain high cooperativity for ensembles of a few thousand atoms due to the tight confinement of the guided modes and constructive interference over the entire chain of trapped atoms. We studied the theory of the phase shift and polarization rotation induced on the guided light by the trapped atoms using the dyadic Green’s function method. The Green’s function is related to a full Heisenberg-Langevin treatment of the dispersive response of the quantized field to tensor polarizable atoms. In this talk, I will illustrate how do we apply our formalism to quantum nondemolition (QND) measurement of the atoms via polarimetry. We study shot-noise-limited detection of atom number for atoms in a completely mixed spin state and the squeezing of projection noise for atoms in clock states. Compared with squeezing of atomic ensembles in free space, we capitalize on unique features that arise in the nanofiber geometry including anisotropy of both the intensity and polarization of the guided modes. We use a first principles stochastic master equation to model the squeezing as function of time in the presence of decoherence due to optical pumping. We find a peak metrological squeezing of ~5 dB is achievable with current technology for ~2500 atoms. The theory established can be used to guide the design of nanofiber- or waveguide-based quantum interfaces.</p>
 <h2 id="note">Note:</h2>
 <ul>
 <li><p>There are some researchers contacted me and my supervisor before the workshop for some chat, and hence the chat time over the poster session may be limited. But if you are interested in my poster, we can talk about it at any break time during the workshop.</p></li>
 <li><p>Since I am also serving for a few other duties recently, this poster was made in a hurry and was not well organized in a normal order. You may want to talk to me or contact me if you find an error or anywhere confusing.</p></li>
-<li><p>More details can be found in our publication: <a href="http://journals.aps.org/pra/abstract/10.1103/PhysRevA.93.023817">X. Qi, B. Q. Baragiola, P. S. Jessen, and I. H. Deutsch, Phys. Rev. A 93, 023817 (2016)</a>. ArXiv online: <a href="https://arxiv.org/abs/1509.02625">https://arxiv.org/abs/1509.02625</a>. The full title is <strong><em>Dispersive response of atoms trapped near the surface of an optical nanofiber with applications to quantum nondemolition measurement and spin squeezing</em></strong>.</p></li>
+<li><p>More details can be found in our publication: <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.93.023817">X. Qi, B. Q. Baragiola, P. S. Jessen, and I. H. Deutsch, Phys. Rev. A 93, 023817 (2016)</a>. ArXiv online: <a href="https://arxiv.org/abs/1509.02625">https://arxiv.org/abs/1509.02625</a>. The full title is <strong><em>Dispersive response of atoms trapped near the surface of an optical nanofiber with applications to quantum nondemolition measurement and spin squeezing</em></strong>.</p></li>
 </ul>
 <p>Thanks for your interest, and hopefully see you in SQuInT!</p>
 <div class="references">
