--- a/pubs/index.html
+++ b/pubs/index.html
@@ -201,7 +201,7 @@ var _hmt = _hmt || [];
 
     <h2 id="upcoming-event">Upcoming event:</h2>
 <ul>
-<li>PhD post-candidate annual talk has been scheduled on Nov 16th, 2016.</li>
+<li>SQuInT 2017 talk (Spin Squeezing on Nanophotonic Waveguides), Baton Rouge, Louisiana, February 23-25, 2017.</li>
 </ul>
 <h1 id="employment">Employment</h1>
 <ul>
@@ -612,9 +612,10 @@ This thesis presents a theoretical study of the collective effects of a large nu
 </pre>
 </div>
 </li></ol>
- 
+
 <h1 id="selected-talks-and-conferences">Selected Talks and Conferences:</h1>
 <ul>
+<li>Nov 16th, 2016: Annual research report, CQuIC @ Albuquerque, NM, USA.</li>
 <li>July 31-Aug 5, 2016: <a href="https://www.grc.org/programs.aspx?id=14962">Gordon Research Conference – Quantum Entanglement, New States of Matter, and Correlated Dynamics</a>, Easton, MA, USA. (poster)</li>
 <li>July 30-31, 2016: <a href="https://www.grc.org/programs.aspx?id=16636">Gordon Research Seminar – Quantum Simulation, Entanglement and Dynamics of Condensed Matter Systems and Field Theories</a>, Easton, MA, USA. (poster)</li>
 <li>Feb 18-20, 2016: <a href="http://physics.unm.edu/SQuInT/2016/abstracts.php?person_id=376">18th Annual SQuInT workshop</a>, Albuquerque, NM, USA. (poster)</li>
@@ -651,10 +652,10 @@ This thesis presents a theoretical study of the collective effects of a large nu
 </div>
 <div class="col-md-4 col-sm-3" style="border-left: 1px solid #eee;"><!-- sidebar -->
   <p><small> Updated: <time
-            datetime="2016-09-12 07:57:12 +0000"
-            property="dc:modified">12 Sep 2016</time></small>
+            datetime="2016-11-21 21:58:46 +0000"
+            property="dc:modified">21 Nov 2016</time></small>
   <br/>
-  <tiny> <i class="glyphicon glyphicon-barcode"></i> SHA Hash: <a href="https://github.com/i2000s/i2000s.github.io/commit/2885f91dc42a42a76455f5974fac0e5d589af432/vita.md"> 2885f91</a></tiny>
+  <tiny> <i class="glyphicon glyphicon-barcode"></i> SHA Hash: <a href="https://github.com/i2000s/i2000s.github.io/commit/b7f4fc3bef7b057c61dbfb3630ffc2ba155a9ee3/vita.md"> b7f4fc3</a></tiny>
   </p>
   <h4>Profiles and Metrics</h4>
   <p>
