--- a/community/index.html
+++ b/community/index.html
@@ -342,7 +342,7 @@
       <div class="row">
        <h2>Non-for-profit organizations that I co-created for communities:</h2>
        <ul style="list-style-type:row">
-        <li><a href="http://cquic-github.github.io/" target="_blank">CQuIC@GitHub</a>: for CQuIC members who do code for science. </li>
+        <li><a href="http://cquic.github.io/" target="_blank">CQuIC@GitHub</a>: for CQuIC members who do code for science. </li>
         <li><a href="http://juliaquantum.github.io/" target="_blank">JuliaQuantum</a>: for establishing standards and computational libraries in Julia for quantum science and technology. </li>
         <li><a href="http://iciq.github.io/" target="_blank">ICIQ</a>: the open community stands for Information, Computation, Intelligence and Quantum.
           We have scientists, journalists, enterprineurs, students and many other professionals
@@ -393,7 +393,7 @@
       <img src="https://www.qixiaodong.tk/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add notes on MEEP and MPB. More on scaling the site.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/b7f4fc3bef...69753f3977">11:49 2016/11/21</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to b7f4fc3bef7b057c61dbfb3630ffc2ba155a9ee3.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/95a02a2db5...f16666efd6">10:03 2016/11/21</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add SQuInT 2017 talk abstract draft post. More details on URL redirecting.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8ddb64093e...b7f4fc3bef">09:59 2016/11/21</a></li><li>i2000s commented on issue FilipDominec/python-meep-install#2: <em>@FilipDominec Thank you for replying. I have used your script to install meep-openmpi, and it seems working for now. But when I went through your s…</em> <a href="https://github.com/FilipDominec/python-meep-install/issues/2#issuecomment-261984487">04:15 2016/11/21</a></li><li>i2000s commented on issue FilipDominec/python-meep-install#2: <em>@FilipDominec I think meep with openmpi works now with the latest script in this repo. I am not sure what do you mean on the -fPIC parameter to ins…</em> <a href="https://github.com/FilipDominec/python-meep-install/issues/2#issuecomment-261859751">07:05 2016/11/21</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix the repo name.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/47266a4e03...41913944cd">05:15 2016/11/22</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Correct baseurl for the main site. Update instruction on compiling the site locally.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/69753f3977...47266a4e03">04:55 2016/11/22</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 69753f3977eff244103d1b285a9c788d9a03c2b1.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/f16666efd6...f0ff6baa71">11:54 2016/11/21</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add notes on MEEP and MPB. More on scaling the site.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/b7f4fc3bef...69753f3977">11:49 2016/11/21</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to b7f4fc3bef7b057c61dbfb3630ffc2ba155a9ee3.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/95a02a2db5...f16666efd6">10:03 2016/11/21</a></li></ul>
            </div>
        </div>
     </div>
@@ -461,7 +461,7 @@
       
 <!-- COinS metadata (for citation managers like Zotero etc), goes in body text -->
   <span
-      class="Z3988" 
+      class="Z3988"
       title="ctx_ver=Z39.88-2004
       &amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Adc
       &amp;rfr_id=info%3Asid%2Focoins.info%3Agenerator
