Updating to 80d560c93440ef308cdd67cd32b4d7857dbb531c.

--- a/noteblog.html
+++ b/noteblog.html
@@ -40,7 +40,7 @@ layout: default
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="/noteblog" />
+<meta property="dc:identifier" content="https://www.qixiaodong.tk/noteblog" />
 <meta property="dc:rights" content="CC-BY" />
 <meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
 <meta property="dc:subject" content="Physics" />
@@ -65,8 +65,8 @@ layout: default
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Exploring the Quantum World" />
-<meta name="twitter:description" content="My open science notebook and blog" />
-<meta name="twitter:image" content="/assets/img/qi2016.jpg" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
@@ -307,7 +307,7 @@ While optical fibers have been used for primary quantum communications, atom-fib
             <hr>
             <h4> <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;" >
               <img src="https://www.qixiaodong.tk/assets/img/icon-github.png" alt="github"> What I'm Coding </a></h4>
-            <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix the repo name.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/47266a4e03...41913944cd">05:15 2016/11/22</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Correct baseurl for the main site. Update instruction on compiling the site locally.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/69753f3977...47266a4e03">04:55 2016/11/22</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 69753f3977eff244103d1b285a9c788d9a03c2b1.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/f16666efd6...f0ff6baa71">11:54 2016/11/21</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add notes on MEEP and MPB. More on scaling the site.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/b7f4fc3bef...69753f3977">11:49 2016/11/21</a></li></ul>
+            <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Branch out subrepos.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/41913944cd...80d560c934">05:48 2016/11/22</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 41913944cd548c8973aa75d3b13cefeb2fe3e1db.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/f0ff6baa71...0122511b4e">05:20 2016/11/22</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix the repo name.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/47266a4e03...41913944cd">05:15 2016/11/22</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Correct baseurl for the main site. Update instruction on compiling the site locally.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/69753f3977...47266a4e03">04:55 2016/11/22</a></li></ul>
           </div>
 
          </div>
