--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="/" />
+<meta property="dc:identifier" content="https://www.qixiaodong.tk/" />
 <meta property="dc:rights" content="CC-BY" />
 <meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
 <meta property="dc:subject" content="Physics" />
@@ -59,7 +59,7 @@
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Xiaodong Qi's NoteBlog" />
 <meta name="twitter:description" content="Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done at the Center for Quantum Information and Control (CQuIC), University of New Mexico." />
-<meta name="twitter:image" content="/assets/img/qi2016.jpg" />
+<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
