--- a/notebooks.html
+++ b/notebooks.html
@@ -39,7 +39,7 @@ layout: default
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="/notebooks" />
+<meta property="dc:identifier" content="https://www.qixiaodong.tk/notebooks" />
 <meta property="dc:rights" content="CC-BY" />
 <meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
 <meta property="dc:subject" content="Physics" />
@@ -64,8 +64,8 @@ layout: default
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Jupyter Notebooks" />
-<meta name="twitter:description" content="Jupyter Notebooks" />
-<meta name="twitter:image" content="/assets/img/qi2016.jpg" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
