Updating to b14c05d5d0776de4971f274f0321d94bd5bbe16f.

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -34,7 +34,7 @@
 <meta property="dc:date" content="" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="/pubs/" />
+<meta property="dc:identifier" content="https://www.qixiaodong.tk/pubs/" />
 <meta property="dc:rights" content="CC-BY" />
 <meta property="dc:source" content="The NoteBlog of Xiaodong Qi" />
 <meta property="dc:subject" content="Physics" />
@@ -59,8 +59,8 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@i2000s" />
 <meta name="twitter:title" content="Vita" />
-<meta name="twitter:description" content="Vita" />
-<meta name="twitter:image" content="/assets/img/qi2016.jpg" />
+<meta name="twitter:description" content="" />
+<meta name="twitter:image" content="https://www.qixiaodong.tk/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
@@ -652,10 +652,10 @@ This thesis presents a theoretical study of the collective effects of a large nu
 </div>
 <div class="col-md-4 col-sm-3" style="border-left: 1px solid #eee;"><!-- sidebar -->
   <p><small> Updated: <time
-            datetime="2016-11-21 21:58:46 +0000"
-            property="dc:modified">21 Nov 2016</time></small>
+            datetime="2016-11-22 08:41:04 +0000"
+            property="dc:modified">22 Nov 2016</time></small>
   <br/>
-  <tiny> <i class="glyphicon glyphicon-barcode"></i> SHA Hash: <a href="https://github.com/i2000s/i2000s.github.io/commit/b7f4fc3bef7b057c61dbfb3630ffc2ba155a9ee3/vita.md"> b7f4fc3</a></tiny>
+  <tiny> <i class="glyphicon glyphicon-barcode"></i> SHA Hash: <a href="https://github.com/i2000s/i2000s.github.io/commit/b14c05d5d0776de4971f274f0321d94bd5bbe16f/vita.md"> b14c05d</a></tiny>
   </p>
   <h4>Profiles and Metrics</h4>
   <p>
@@ -724,7 +724,7 @@ This thesis presents a theoretical study of the collective effects of a large nu
       
 <!-- COinS metadata (for citation managers like Zotero etc), goes in body text -->
   <span
-      class="Z3988" 
+      class="Z3988"
       title="ctx_ver=Z39.88-2004
       &amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Adc
       &amp;rfr_id=info%3Asid%2Focoins.info%3Agenerator
