Update title of the site.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: barefooter
 permalink: /
-title: Xiaodong Qi's NoteBlog
+title: A Notebook of Xiaodong Qi's
 subtitle: 戚晓东的研习笔记
 description: Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done at the Center for Quantum Information and Control (CQuIC), University of New Mexico.
 ---
