Use DuckDuckGo and update front page content.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ description: Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done
       <a class="btn btn-primary btn-lg btn-block" style="font-weight:bold;" href="/en/" role="button">English Site</a>
   </div>
   <br />
-  <br />
+  <p>The CV of Xiaodong Qi and one of his scholar notebook in doing academic research.
+    Everything is citable using the permanent URL at <a href="//purl.org/qxd/">https://purl.org/qxd/</a>.</p>
   <br />
   <div class="col-md-10 col-sm-11 col-md-offset-1" style="text-align:center; align:center;">
     <div style="font-weight:bold; text-align:center;font-size:1.2em;">
@@ -66,7 +67,8 @@ description: Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done
         <a class="btn btn-success btn-lg btn-block" style="font-weight:bold;" href="/cn/" role="button">中文站点</a>
       </div>
       <br />
-      <br />
+      <p>戚晓东的履历和学术笔记。如需引用请使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
+        中文网站正在更新中。详见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
       <br />
       <div class="col-md-10 col-sm-11">
         <div style="font-weight:bold; text-align:center;font-size:1.2em;">
