Updating to 367d7efedaca45e37a6a8377e6c587e63137054d.

--- a/index.html
+++ b/index.html
@@ -199,8 +199,10 @@ var _hmt = _hmt || [];
       <a class="btn btn-primary btn-lg btn-block" style="font-weight:bold;" href="/en/" role="button">English Site</a>
   </div>
   <br />
-  <p>The CV of Xiaodong Qi and one of his scholar notebook in doing academic research.
-    Everything is citable using the permanent URL at <a href="//purl.org/qxd/">https://purl.org/qxd/</a>.</p>
+  <div class="col-md-11 col-sm-11">
+    <p>The CV of Xiaodong Qi and one of his scholar notebook in doing academic research.
+      Everything is citable using the permanent URL at <a href="//purl.org/qxd/">https://purl.org/qxd/</a>.</p>
+  </div>
   <br />
   <div class="col-md-10 col-sm-11 col-md-offset-1" style="text-align:center; align:center;">
     <div style="font-weight:bold; text-align:center;font-size:1.2em;">
@@ -261,8 +263,10 @@ var _hmt = _hmt || [];
         <a class="btn btn-success btn-lg btn-block" style="font-weight:bold;" href="/cn/" role="button">中文站点</a>
       </div>
       <br />
-      <p>戚晓东的履历和学术笔记。如需引用请使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
-        中文网站正在更新中。详见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
+      <div class="col-md-11 col-sm-11">
+        <p>戚晓东的履历和学术笔记。如需引用请使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
+          中文网站正在更新中。详见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
+      </div>
       <br />
       <div class="col-md-10 col-sm-11">
         <div style="font-weight:bold; text-align:center;font-size:1.2em;">
