--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ description: Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done
       <a class="btn btn-primary btn-lg btn-block" style="font-weight:bold;" href="/en/" role="button">English Site</a>
   </div>
   <br />
-  <div class="col-md-11 col-sm-11">
+  <div class="col-md-10 col-sm-11">
+    <p />
     <p>The CV of Xiaodong Qi and one of his scholar notebook in doing academic research.
       Everything is citable using the permanent URL at <a href="//purl.org/qxd/">https://purl.org/qxd/</a>.</p>
   </div>
@@ -69,8 +70,9 @@ description: Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done
         <a class="btn btn-success btn-lg btn-block" style="font-weight:bold;" href="/cn/" role="button">中文站点</a>
       </div>
       <br />
-      <div class="col-md-11 col-sm-11">
-        <p>戚晓东的履历和学术笔记。如需引用请使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
+      <div class="col-md-10 col-sm-11">
+        <p />
+        <p>戚晓东的履历和学术笔记。如需引用可以使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
           中文网站正在更新中。详见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
       </div>
       <br />
