--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ var _hmt = _hmt || [];
       <a class="btn btn-primary btn-lg btn-block" style="font-weight:bold;" href="/en/" role="button">English Site</a>
   </div>
   <br />
-  <div class="col-md-10 col-sm-11">
+  <div class="col-md-10 col-sm-11 col-md-offset-1">
     <p />
     <p>The CV of Xiaodong Qi and one of his scholar notebook in doing academic research.
       Everything is citable using the permanent URL at <a href="//purl.org/qxd/">https://purl.org/qxd/</a>.</p>
@@ -267,7 +267,7 @@ var _hmt = _hmt || [];
       <div class="col-md-10 col-sm-11">
         <p />
         <p>戚晓东的履历和学术笔记。如需引用可以使用永久链接地址<a href="//purl.org/qxd/">https://purl.org/qxd/</a>.
-          中文网站正在更新中。详见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
+          中文网站正在更新中。详细项目追踪见<a href="https://github.com/i2000s/cn/projects/1">这里</a>。</p>
       </div>
       <br />
       <div class="col-md-10 col-sm-11">
