--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: barefooter
 permalink: /
 title: A Notebook of Xiaodong Qi's
 subtitle: 戚晓东的研习笔记
-description: Xiaodong Qi's NoteBlogs and CV. Mostly relates to his research done at the Center for Quantum Information and Control (CQuIC), University of New Mexico.
+description: Xiaodong Qi's Notebooks and CV. Mostly relates to his research done at the Center for Quantum Information and Control (CQuIC), University of New Mexico.
 ---
 
 <div class="row">
