Updating to 9d13ab98fdf161af6b62f860287b5a333ae74d95.

--- a/archives.html
+++ b/archives.html
@@ -177,7 +177,7 @@ var _hmt = _hmt || [];
         <!-- Search site using DuckDuckGo's index -->
           <form class="navbar-form navbar-right" role="search" method="get" action="//duckduckgo.com/">
             <div class="form-group">
-              <input type="hidden" name="sites" value="https://www.qixiaodong.tk" />
+              <input type="hidden" name="sites" value="https://www.qixiaodong.com" />
               <input type="hidden" value="1" name="kh"></input> <!-- To turn on https -->
               <input type="hidden" value="1" name="kn"></input> <!-- To open up a new window -->
               <input type="hidden" value="1" name="kac"></input> <!-- To turn on auto-suggestion -->
@@ -271,7 +271,7 @@ var _hmt = _hmt || [];
          </div>
       <div class="row" align="center" clear="both">
             <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
-              <span align="center" margin-top="-10px">Copyright &copy; 2018 Xiaodong Qi. </span></a>
+              <span align="center" margin-top="-10px">Copyright &copy; 2019 Xiaodong Qi. </span></a>
             <br>
       </div>
       
@@ -346,19 +346,19 @@ var _hmt = _hmt || [];
     <!-- Twitter Bootstrap Javascript -->
     <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-alert.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-modal.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tab.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tooltip.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-popover.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-button.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-carousel.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-typeahead.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/application.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-dropdown.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-transition.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-alert.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-modal.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-scrollspy.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-tab.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-tooltip.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-popover.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-button.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-carousel.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-typeahead.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
