--- a/search.html
+++ b/search.html
@@ -62,7 +62,7 @@
         <!-- Search site using DuckDuckGo's index -->
           <form class="navbar-form navbar-right" role="search" method="get" action="//duckduckgo.com/">
             <div class="form-group">
-              <input type="hidden" name="sites" value="https://www.qixiaodong.tk" />
+              <input type="hidden" name="sites" value="https://www.qixiaodong.com" />
               <input type="hidden" value="1" name="kh"></input> <!-- To turn on https -->
               <input type="hidden" value="1" name="kn"></input> <!-- To open up a new window -->
               <input type="hidden" value="1" name="kac"></input> <!-- To turn on auto-suggestion -->
@@ -143,20 +143,20 @@
     <!-- A little twitter link -->
     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
     <!--
-    <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-alert.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-modal.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tab.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tooltip.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-popover.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-button.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-collapse.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-carousel.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-typeahead.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/application.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-transition.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-alert.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-modal.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-dropdown.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-scrollspy.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-tab.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-tooltip.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-popover.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-button.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-collapse.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-carousel.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-typeahead.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/application.js"></script>
     -->
 
 
