--- a/tags.html
+++ b/tags.html
@@ -170,7 +170,7 @@ var _hmt = _hmt || [];
         <!-- Search site using DuckDuckGo's index -->
           <form class="navbar-form navbar-right" role="search" method="get" action="//duckduckgo.com/">
             <div class="form-group">
-              <input type="hidden" name="sites" value="https://www.qixiaodong.tk" />
+              <input type="hidden" name="sites" value="https://www.qixiaodong.com" />
               <input type="hidden" value="1" name="kh"></input> <!-- To turn on https -->
               <input type="hidden" value="1" name="kn"></input> <!-- To open up a new window -->
               <input type="hidden" value="1" name="kac"></input> <!-- To turn on auto-suggestion -->
@@ -451,16 +451,16 @@ var _hmt = _hmt || [];
         -->
           <div class='cloud'>
             <h1> Tag Cloud</h1>
-            <a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
-<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
-<a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
-<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
-<a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
-<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
-<a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
-<a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
+            <a style='font-size: NaN%' href='/tags.html#conference'>conference</a>
 <a style='font-size: NaN%' href='/tags.html#GPU'>GPU</a>
 <a style='font-size: NaN%' href='/tags.html#nanofiber'>nanofiber</a>
+<a style='font-size: NaN%' href='/tags.html#Julia'>Julia</a>
+<a style='font-size: NaN%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: NaN%' href='/tags.html#poster'>poster</a>
+<a style='font-size: NaN%' href='/tags.html#matlab'>matlab</a>
+<a style='font-size: NaN%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
+<a style='font-size: NaN%' href='/tags.html#quantum optics'>quantum optics</a>
+<a style='font-size: NaN%' href='/tags.html#summer study'>summer study</a>
 
           </div>
 
@@ -510,7 +510,7 @@ var _hmt = _hmt || [];
          </div>
       <div class="row" align="center" clear="both">
             <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
-              <span align="center" margin-top="-10px">Copyright &copy; 2018 Xiaodong Qi. </span></a>
+              <span align="center" margin-top="-10px">Copyright &copy; 2019 Xiaodong Qi. </span></a>
             <br>
       </div>
       
@@ -585,19 +585,19 @@ var _hmt = _hmt || [];
     <!-- Twitter Bootstrap Javascript -->
     <script src="/assets/js/bootstrap-collapse.js"></script> <!-- for collapsing navbar-->
     <!-- Unused Twitter Bootstrap Javascript
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-dropdown.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-transition.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-alert.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-modal.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tab.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-tooltip.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-popover.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-button.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-carousel.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/bootstrap-typeahead.js"></script>
-    <script src="https://www.qixiaodong.tk/assets/js/application.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-dropdown.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-transition.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-alert.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-modal.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-scrollspy.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-tab.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-tooltip.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-popover.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-button.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-carousel.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/bootstrap-typeahead.js"></script>
+    <script src="https://www.qixiaodong.com/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
